// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders the text inside it 1`] = `
<Button>
  <button
    className="button primary"
  >
    Test
  </button>
</Button>
`;

exports[`Button renders value 1`] = `
<Button
  value="30"
>
  <button
    className="button primary"
    value="30"
  >
    Test
  </button>
</Button>
`;

exports[`adds types 1`] = `
<Button
  type="secondary"
>
  <button
    className="button secondary"
  >
    <p>
      Work
    </p>
  </button>
</Button>
`;

exports[`adds types 2`] = `
<Button
  type="ghost"
>
  <button
    className="button ghost"
  >
    <p>
      Ghost
    </p>
  </button>
</Button>
`;

exports[`adds types 3`] = `
<Button
  className="test"
>
  <button
    className="test button primary"
  >
    <p>
      Ghost
    </p>
  </button>
</Button>
`;

exports[`calls on click function 1`] = `
<Button
  onClick={[Function]}
  type="secondary"
>
  <button
    className="button secondary"
    onClick={[Function]}
  >
    <p>
      Work
    </p>
  </button>
</Button>
`;
